HeapRegions marked as archive even if CDS mapping fails

XMLWordPrintable

    • gc
    • b22
    • Verified

        Sometimes SPECjbb2015, when run with e.g. -Xmx16g Xmn12g crashes in random places.

        The only commonality found so far is that it occurs after a full gc as -XX:+VerifyAfterGC fails at some point. Further, in all these cases, the klass pointer seems to reference unmapped memory, so potentially some class unloading related issue.

        So far it has been tracked down to some build <= b15, b14 (and b10) seem good so far.

        Reproducability in b15+ seems to be good.

              Assignee:
              Stefan Johansson
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: