8214118: HeapRegions marked as archive even if CDS mapping fails

Reviewed-by: tschatzl, jiangli